--- a/CoffeeShopWebApp/Views/Home/UserRegistration.cshtml
+++ b/CoffeeShopWebApp/Views/Home/UserRegistration.cshtml
@@ -5,14 +5,15 @@
 
 <h2>UserRegistration</h2>
 <body>
-    <form action="/Home/AddUser" method="post">
-        <label class="control-label">First Name</label> <input type="text" name="FirstName" class="form-control" />
-        <label class="control-label">Last Name</label> <input type="text" name="LastName" class="form-control" />
-        <label class="control-label">Birthday</label> <input type="date" name="Birthday" class="form-control" />
-        <label class="control-label">Email</label> <input type="email" name="Email" class="form-control" />
+    <form name="signup" method="post" action="/Home/AddUser"><!-- onsubmit="Validate()">-->
+        <p>@ViewBag.ErrorMessage</p>
+        <label class="control-label">First Name</label> <input type="text" name="FirstName" class="form-control" id="fn" />
+        <label class="control-label">Last Name</label> <input type="text" name="LastName" class="form-control" id="ln" />
+        <label class="control-label">Birthday</label> <input type="date" name="Birthday" class="form-control" id="bd" />
+        <label class="control-label">Email</label> <input type="email" name="Email" class="form-control" id="em" />
         <!--<label class="control-label">Sign me up for promotional emails</label> <input type="checkbox" name="Promo" class="form-control" />-->
-
-
+        <script src="~/Scripts/myScript.js"></script>
+        <!---action="/Home/AddUser"-->
         <input type="submit" value="Sign Up!" class="btn-default" />
     </form>
 </body>
