Thanks to presentations/lecture today I know what I'm doing with javascript. Did some fancy things with <span>

--- a/CoffeeShopWebApp/Views/Home/UserRegistration.cshtml
+++ b/CoffeeShopWebApp/Views/Home/UserRegistration.cshtml
@@ -5,15 +5,41 @@
 
 <h2>UserRegistration</h2>
 <body>
-    <form name="signup" method="post" action="/Home/AddUser"><!-- onsubmit="Validate()">-->
+    <form name="signup" method="post" action="/Home/AddUser" onsubmit="return Validate()">
         <p>@ViewBag.ErrorMessage</p>
-        <label class="control-label">First Name</label> <input type="text" name="FirstName" class="form-control" id="fn" />
-        <label class="control-label">Last Name</label> <input type="text" name="LastName" class="form-control" id="ln" />
-        <label class="control-label">Birthday</label> <input type="date" name="Birthday" class="form-control" id="bd" />
-        <label class="control-label">Email</label> <input type="email" name="Email" class="form-control" id="em" />
+        <label class="control-label">
+            First Name:
+            <input type="text" name="FirstName" class="form-control" id="fn" onkeyup="validFN()" />
+            <span id="fnMessage"></span>
+        </label>
+        <br />
+        <label class="control-label">
+            Last Name:
+            <input type="text" name="LastName" class="form-control" id="ln" onkeyup="validLN()" />
+            <span id="lnMessage"></span>
+        </label>        <br />
+
+        <label class="control-label">
+            Birthday:
+            <input type="date" name="Birthday" class="form-control" id="bd" oninput="validBD()" onchange="validBD()"/>
+            <span id="bdMessage"></span>
+        </label>        <br />
+
+        <label class="control-label">
+            Email:
+            <input type="email" name="Email" class="form-control" id="email" onkeyup="validEM()" />
+            <span id="emMessage"></span>
+        </label>        <br />
+
+        <label class="control-label">
+            Confirm Email:
+            <input type="email" name="ConfirmEmail" class="form-control" id="cfem" onkeyup="check_match()" />
+            <span id="message"></span>
+        </label>        <br />
+
         <!--<label class="control-label">Sign me up for promotional emails</label> <input type="checkbox" name="Promo" class="form-control" />-->
-        <script src="~/Scripts/myScript.js"></script>
         <!---action="/Home/AddUser"-->
         <input type="submit" value="Sign Up!" class="btn-default" />
     </form>
+    <script src="~/Scripts/myScript.js" type="text/javascript"></script>
 </body>
