Commit for Lab 22. Added more fields (with validation) and included a css

--- a/CoffeeShopWebApp/Views/Home/Summary.cshtml
+++ b/CoffeeShopWebApp/Views/Home/Summary.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Summary";
 }
-
+<link href="~/Content/DavidIsStylish.css" rel="stylesheet" type="text/css" />
 <h2>Summary</h2>
 <h3>@ViewBag.ConfMessage</h3>
 <p>You did it!</p>
@@ -10,5 +10,6 @@
     <li>@ViewBag.Name</li>
     <li>@ViewBag.Email</li>
     <li>@ViewBag.Birthday</li>
+    <li>@ViewBag.PhoneNumber</li>
 </ul>
 
